Day Two NLW - Map Half Through

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <div id="page-landing">
       <div id="container">
         <header>
-          <img src="/_public/_images/logo.svg" alt="logo" id="logo" class="animate-up"/>
+          <img src="/_public/_images/logo.svg" alt="Logo Happy" id="logo" class="animate-up"/>
           <div class="location animate-up">
             <p>Florianópolis</p>
             <p><strong>Santa catarina</strong></p>
@@ -25,7 +25,7 @@
           <h1 class="animate-up">Leve felicidade para o mundo</h1>
           <section class="visit">
               <p class="animate-up">Visite orfanatos e mude o dia de muitas crianças</p>
-          <a href="/map.html" title="Veja os Orfanatos" class="animate-up">
+          <a href="/orphanages.html" title="Veja os Orfanatos" class="animate-up">
             <img src="/_public/_images/arrow.svg" alt="Ir para o mapa"
           /></a>
         </section>
